--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
   <header>
-    <h1>Welcome!</h1>
-	<p>My name is Allen Fortner and this is my cool website. I'm not sure what to do with it yet, but I'll figure something out! 😁</p>
-  <footer>© Copyright 2018 Allen Fortner</footer>
+    <h1>Allen Fortner</h1>
+	<ul class="navbar">
+		<li><a href="https://allenfortner.github.io">Home</a></li>
+		<li><a href="https://allenfortner.github.io/project-pixel-art-maker">Pixel Art Maker Project</a></li>
+  </header>
+  <p>My name is Allen Fortner and this is my cool website.</p>
+  <footer>&copy: Copyright 2018 Allen Fortner</footer>
 </body>
 </html>
